--- a/python/agents/youtube-analyst/pyproject.toml
+++ b/python/agents/youtube-analyst/pyproject.toml
@@ -23,4 +23,15 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest",
+    "ruff>=0.4.6",
 ]
+
+[tool.ruff]
+extend = "../../../pyproject.toml"
+
+[tool.ruff.lint.isort]
+known-first-party = ["youtube_analyst"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
